Introduce abstract AuthzToken with Encrypted, Signed and SciTokens implementations